--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -55,6 +55,7 @@ body{
 footer{
     position: sticky;
     bottom: 0;
+    z-index: 1;
 }
 
 .fa-red{
